# Tilder-web-app

./: .gitignore  CODE_OF_CONDUCT.md  README.md
.github/workflows/: keep-alive.yml
web-app/: .dockerignore  .env  .env.example  .env.render.example  Dockerfile  index.html  localRunner.js  package-lock.json  package.json  render.yaml  server.js  terminal-bridge.js  vite.config.js
web-app/data/: sync-store.json
web-app/docs/: OAUTH_REGISTRATION_VALUES.md  OAUTH_SETUP.md  extensions.md
web-app/public/: tilder-extension-sample.json
web-app/public/extensions/csv-lab/: main.js
web-app/scripts/: build-extensions.mjs  generate-5000-snippets.mjs  inject-react-craft-snippets.mjs  make-extensions-real.mjs  prepare-tauri-runtime.mjs  sync-friendly-snippets.mjs  sync-monaco-completions.mjs  tilderx.mjs
web-app/server/: extensionsMarketplace.js
web-app/server/lsp/: broker.js  registry.js
web-app/shared/editor/: languageRegistry.js
web-app/shared/extensions/: publishing.js
web-app/src/: App.css  App.jsx
web-app/src-tauri/: Cargo.toml  tauri.conf.json
web-app/src-tauri/capabilities/: default.json
web-app/src-tauri/icons/: icon.icns
web-app/src-tauri/src/: lib.rs  main.rs
web-app/src/components/: ShortcutManager.js
web-app/src/core/: accountApi.js  apiBase.js  codeRunner.js  editorApi.js  editorLayout.js  editorSessionApi.js  extensionsCatalog.js  extensionsMarketplaceApi.js  extensionsRuntime.js  iconTheme.js  keybindings.js  lspBridge.js  scmApi.js  searchUtils.js  terminalBridge.js  workspace.js
web-app/src/filesystem/: browserFS.js  fs.js  tauriFS.js
(+93 files in other folders)
