[package]
name = "tilder-desktop"
version = "0.1.0"
description = "Tilder desktop shell"
authors = ["Tilder"]
edition = "2021"

[lib]
name = "tilder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
